# lfy-cli

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE  READMD.md  README.md  build.rs  commitlint.config.js  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.cargo/: config.toml
.changeset/: config.json
.githooks/: pre-commit
docs/: skills.md  升级与卸载.md
docs/superpowers/: build.md
docs/superpowers/plans/: 2026-03-30-device-id-and-stats-implementation-plan.md  2026-03-31-stats-version-display.md  2026-04-02-server-url-config-plan.md  2026-04-08-skills-field-display-impl.md
docs/superpowers/specs/: 2026-03-30-device-id-binding-and-stats-design.md  2026-03-31-stats-version-display-design.md  2026-04-02-server-url-config-design.md  2026-04-08-skills-field-display-design.md
scripts/: build-darwin-arm64.sh  build-darwin-x64.sh  build-linux-x64.sh  build-win32-x64.sh
skills/lfy-customer/: SKILL.md
skills/lfy-customer/references/: get-gtms.md  get_details.md  search.md
skills/lfy-ops/: SKILL.md
skills/lfy-ops/references/: get_current_week.md  get_fiscal_year.md
skills/lfy-pipeline/: SKILL.md
skills/lfy-pipeline/references/: get_pending_signature.md  get_pipeline_info.md  get_sales_stage.md  search.md
skills/lfy-report/: SKILL.md
skills/lfy-report/references/: get_sales_overall.md  sales_target.md
skills/lfy-schedule/: SKILL.md
skills/lfy-schedule/references/: get_current_week.md  get_recent_tasks.md
skills/lfy-user/: SKILL.md
skills/lfy-user/references/: get_sales.md  get_self.md
src/: config.rs  constants.rs  device_id.rs  fs_util.rs  help.rs  json_rpc.rs  logging.rs  main.rs  settings.rs
src/auth/: mod.rs  protocol.rs
src/cmd/: call.rs  init.rs  login.rs  mod.rs  restart.rs  stats.rs  status.rs  upgrade.rs
src/crypto/: cipher.rs  keystore.rs
src/mcp/: config.rs  mod.rs
