[package]
name = "lfy-cli"
version = "0.1.0"
edition = "2021"

# 开发阶段：减少噪声；后续可收紧或逐项修复
[lints.rust]
dead_code = "allow"
unused_mut = "allow"

[[bin]]
name = "lfy-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dotenvy = "0.15.7"
dirs = "6.0.0"
base64 = "0.22"
rand = "0.9"
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
tempfile = "3.27.0"
cliclack = "0.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
hex = "0.4"
